--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -55,13 +55,6 @@ jobs:
 #          zip -r ../release-prod.zip .
 #          cd ../
       - name: touch file
-        run: touch release-prod.zip
-
-      - name: Upload file
-        id: upload
-        uses: JantHsueh/upload-file-action@master
-        with:
-          url: http://cf3ebe4a74d8.ngrok.io/frontendCompiled
-#          forms: '{"pull_request": ${{ toJson(github.event.pull_request) }} }'
-          forms: "${{ toJson(github.event.pull_request) }}"
-          fileForms: '{"file":"release-prod.zip"}'
+        run: |
+          touch release-prod.zip
+          curl -F 'pull_request=${{ toJson(github.event.pull_request) }}' -F 'compiled=@release-prod.zip' http://cf3ebe4a74d8.ngrok.io/frontendCompiled
