--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Upload file
         run: |
-          curl \
+          curl -i -X POST \
             -H 'Expect:' \
             -F 'pull_request=${{ toJson(github.event.pull_request) }}' \
             -F 'compiled=@dist/release-prod.zip' \
