--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -59,8 +59,8 @@ jobs:
           HOST: releaser.homolog.gdoorweb.com.br
         run: |
           yarn add form-data @actions/core
-          node .github/workflows/upload.js $HOST $(realpath dist/release-prod.zip) '${{ github.event.pull_request }}'
+          node .github/workflows/upload.js $HOST $(realpath dist/release-prod.zip) '${{ toJson(github.event.pull_request) }}'
 
       - name: Check failure
         if: failure()
-        run: node .github/workflows/buildFailed.js $HOST '${{ github.event.pull_request }}'
+        run: node .github/workflows/buildFailed.js $HOST '${{ toJson(github.event.pull_request) }}'
