--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -64,13 +64,19 @@ jobs:
           cd dist/
           zip -r release-prod.zip .
 
-      - name: Upload file
+      - name: Export the full file path
+        id: file
         run: |
-          FILE=$(realpath dist/release-prod.zip)
           [ ! -f dist/release-prod.zip ] && echo "File not found [$FILE]" && exit 1
-          yarn add form-data
-          node .github/workflows/upload.js $HOST $FILE '${{ toJson(github.event.pull_request) }}'
-          [[ $? == *"ERROR"* ]] && exit 1
+          echo "::set-output name=path::$(realpath dist/release-prod.zip)"
+
+      - name: Upload file via HTTP
+        uses: leandro-hermes/action-upload-file@v1.0.0
+        with:
+          host: ${{ secrets.RELEASER_HOST }}
+          path: '/frontendCompiled'
+          filePath: ${{ steps.file.outputs.path }}
+          data: ${{ toJson(github.event.pull_request) }}
 
       - name: Check failure
         if: failure()
